# fdedupe

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: plan.md
doc/: architecture.md  fdedupe.md
doc/test-plan/: basics.md  detect_changes.md  manual_test_cases.md  symlinks.md
src/: cli.rs  config.rs  db.rs  hash.rs  list.rs  list_tui.rs  main.rs  remove.rs  scan.rs  scan_tui.rs  tui.rs
